plang/testing/logs/false-incorrect/45/program45.p.p
vK MD U0 MHjK :- s tyl (aA6oD); ((gPvy XR U5Z S1)).
jK2.


? ((ozm q7d (YPz) Q Xu)).



